--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3.9'
 
 services:
 
-  spring-boot-template:
+  taiyaki:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "4326:4326"
+      - "4072:4072"
